--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write *.js"
+    "format": "prettier --write *.js",
+    "lint": "eslint *.js"
   },
   "author": "Jakub Wojtach",
   "license": "ISC",
